# claude-deck

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: agents.py  config.py  context.py  mcp.py  plans.py  plugins.py  router.py
backend/app/models/: schemas.py
backend/app/services/: agent_service.py  config_service.py  context_service.py  mcp_registry_service.py  mcp_service.py  permission_service.py  plan_service.py  plugin_service.py  skill_dependency_service.py  skills_registry_service.py
backend/app/utils/: path_utils.py  pattern_utils.py
docs/plans/: 2026-02-07-mcp-page-enhancements-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/layout/: Footer.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/shared/: JsonViewer.tsx
frontend/src/components/ui/: button.tsx
frontend/src/contexts/: ProjectContext.tsx  ThemeContext.tsx
frontend/src/features/agents/: AgentEditor.tsx  AgentWizard.tsx
frontend/src/features/backup/: BackupList.tsx  BackupPage.tsx  BackupWizard.tsx  RestoreWizard.tsx
frontend/src/hooks/: useContextApi.ts  useMCPRegistryApi.ts  usePlansApi.ts
frontend/src/lib/: pattern-utils.ts
frontend/src/types/: agents.ts  backup.ts  config.ts  context.ts  mcp.ts  permissions.ts  plans.ts  plugins.ts  registry.ts  sessions.ts
scripts/: bump-version.sh
(+54 files in other folders)
